--- a/examples/configs/automation/morningHeatingStart.toml
+++ b/examples/configs/automation/morningHeatingStart.toml
@@ -8,28 +8,28 @@ Enabled = true
   DeviceName  = "TimedEvent"
   EventName   = "MorningHeatingOn"
 
-[action.1]
+[Action.1]
   Integration = "Daikin"
   DeviceLabel = "Hall"
   Execute = [ { Control = "temperature", Setting = 18.0 },
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]
 
-[action.2]
+[Action.2]
   Integration = "Daikin"
   DeviceLabel = "Living Room"
   Execute = [ { Control = "temperature", Setting = 18.0 },
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]  
 
-[action.3]
+[Action.3]
   Integration = "Daikin"
   DeviceLabel = "Music Room"
   Execute = [ { Control = "temperature", Setting = 17.0 },
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]  
 
-[action.4]
+[Action.4]
   Integration = "Daikin"
   DeviceLabel = "Dining Room"
   Execute = [ { Control = "temperature", Setting = 16.0 },
