--- a/examples/configs/automation/morningHeatingStart.toml
+++ b/examples/configs/automation/morningHeatingStart.toml
@@ -15,17 +15,17 @@ Enabled = true
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]
 
-[Action.2]
-  Integration = "Daikin"
-  DeviceLabel = "Living Room"
-  Execute = [ { Control = "temperature", Setting = 18.0 },
-              { Control = "mode",        Setting = "Heat" },
-              { Control = "power",       Setting = "on" } ]  
+# [Action.2]
+#   Integration = "Daikin"
+#   DeviceLabel = "Living Room"
+#   Execute = [ { Control = "temperature", Setting = 18.0 },
+#               { Control = "mode",        Setting = "Heat" },
+#               { Control = "power",       Setting = "on" } ]  
 
 [Action.3]
   Integration = "Daikin"
   DeviceLabel = "Music Room"
-  Execute = [ { Control = "temperature", Setting = 17.0 },
+  Execute = [ { Control = "temperature", Setting = 16.0 },
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]  
 
@@ -35,4 +35,3 @@ Enabled = true
   Execute = [ { Control = "temperature", Setting = 16.0 },
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]  
-
