--- a/examples/configs/automation/exampleMqttButton.toml
+++ b/examples/configs/automation/exampleMqttButton.toml
@@ -10,6 +10,12 @@ Enabled = true
   Name = "MusicRoomTemp"
   Is = "<"                # one of: "=", "!=", "<", ">", 
   Value = 17.0
+# [Condition]
+#    Integration = "Scraper"
+#    Name = "BrotherA3"
+#    Index = 2  
+#    Is = ">"                # one of: "=", "!=", "<", ">", 
+#    Value = 20
 
 [Action.1]
   Integration = "Daikin"
