Refactor HostChecker as an independent Integration

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -13,9 +13,9 @@ ControlPort = 46445           # HTTP port for back-end admin control
 Integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
-#  "network",
 #  "datalogger",
 #  "daikin",
+  "hostchecker",
 #  "influx",
   "pimqttgpio",
   "scraper",
