--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -13,11 +13,11 @@ ControlPort = 46445           # HTTP port for back-end admin control
 Integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
-#  "datalogger",
+  "datalogger",
 #  "daikin",
   "hostchecker",
-#  "influx",
+  "influx",
   "pimqttgpio",
   "scraper",
-#  "tuya",
+  "tuya",
 ]
