Extend Tuya to support Sockets (LIDL ZigBee...)

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -14,10 +14,10 @@ Integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
 #  "datalogger",
-  "daikin",
-  "hostchecker",
+#  "daikin",
+#  "hostchecker",
 #  "influx",
 #  "pimqttgpio",
 #  "scraper",
-#  "tuya",
+  "tuya",
 ]
