Fix handling of Events with some native datatypes in Infux Integration

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -17,7 +17,7 @@ Integrations = [
 #  "daikin",
 #  "hostchecker",
 #  "influx",
-#  "pimqttgpio",
+  "pimqttgpio",
 #  "scraper",
-  "tuya",
+#  "tuya",
 ]
