Daikin: Send set temp and refresh after control

--- a/examples/configs/automation/towelRailOffMorning.toml
+++ b/examples/configs/automation/towelRailOffMorning.toml
@@ -1,6 +1,6 @@
 Name = "TowelRailOffMorning"
 Description = "Turn Towel-Rail off for overnight off-peak"
-Enabled = false
+Enabled = true
 
 [Event]
   Name = "Time/Events/TimedEvent/NightOffPeakEnds"
