Add basic Zigbee2MQTT Integration

--- a/examples/configs/automation/morningHeatingStart.toml
+++ b/examples/configs/automation/morningHeatingStart.toml
@@ -8,7 +8,7 @@ Enabled = true
 [Action.1]
   Integration = "Daikin"
   DeviceLabel = "Hall"
-  Execute = [ { Control = "temperature", Setting = 24.0 },
+  Execute = [ { Control = "temperature", Setting = 23.0 },
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]
 
@@ -22,13 +22,14 @@ Enabled = true
 [Action.3]
   Integration = "Daikin"
   DeviceLabel = "Music Room"
-  Execute = [ { Control = "temperature", Setting = 22.0 },
+  Execute = [ { Control = "temperature", Setting = 20.0 },
               { Control = "mode",        Setting = "Heat" },
               { Control = "power",       Setting = "on" } ]  
 
-[Action.4]
-  Integration = "Daikin"
-  DeviceLabel = "Dining Room"
-  Execute = [ { Control = "temperature", Setting = 16.0 },
-              { Control = "mode",        Setting = "Heat" },
-              { Control = "power",       Setting = "on" } ]  
+#[Action.4]
+#  Integration = "Daikin"
+#  DeviceLabel = "Spare Bedroom"
+#  Execute = [ { Control = "temperature", Setting = 16.0 },
+#              { Control = "mode",        Setting = "Heat" },
+#              { Control = "power",       Setting = "on" } ]  
+
