--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -4,8 +4,8 @@ Postcode = "!!SECRET(postcode)"
 MqttBroker = "!!CONSTANT(mqttBroker)"  # Hostname or IP of MQTT Broker
 MqttPort = 1883               # MQTT Broker port
 MqttClientID = "aghast-DEV"   # MQTT Client ID
-MqttUsername = "!!CONSTANT(mqttUsername)"
-MqttPassword = "!!CONSTANT(mqttPassword)"
+MqttUsername = ""
+MqttPassword = ""
 
 LogEvents = true              # A LOT of stuff will be logged if this is true!
 
@@ -17,10 +17,11 @@ Integrations = [
   "automation",
 #  "datalogger",
 #  "daikin",
-  "hostchecker",
-  "influx",
-  "pimqttgpio",
-  "postgres",
-  "scraper",
-  "tuya",
+#  "hostchecker",
+#  "influx",
+#  "pimqttgpio",
+#  "postgres",
+#  "scraper",
+#  "tuya",
+  "zigbee2mqtt",
 ]
