Handle strange 'M' temperature response when in Dehumidifying mode. (Return 0.0 for now)

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -16,12 +16,12 @@ Integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
 #  "datalogger",
-#  "daikin",
+  "daikin",
 #  "hostchecker",
 #  "influx",
 #  "pimqttgpio",
 #  "postgres",
 #  "scraper",
 #  "tuya",
-  "zigbee2mqtt",
+#  "zigbee2mqtt",
 ]
