--- a/examples/configs/automation/morningHeatingStart.toml
+++ b/examples/configs/automation/morningHeatingStart.toml
@@ -3,33 +3,24 @@ Description = "Main Downstairs Heaters On"
 Enabled = true
 
 [Event]
-  Name = "Time/Events/TimedEvent/MorningHeatingOn"
+  Topic = "aghast/time/events/MorningHeatingOn"
 
 [Action.1]
-  Integration = "Daikin"
-  DeviceLabel = "Hall"
-  Execute = [ { Control = "temperature", Setting = 23.0 },
+  Topic = "daikin2mqtt/Hall/set/controls"
+  Execute = [ { Control = "set_temp",    Setting = 23.0 },
               { Control = "mode",        Setting = "Heat" },
-              { Control = "power",       Setting = "on" } ]
+              { Control = "power",       Setting = true } ]
 
 # [Action.2]
 #   Integration = "Daikin"
 #   DeviceLabel = "Living Room"
-#   Execute = [ { Control = "temperature", Setting = 18.0 },
+#   Execute = [ { Control = "tset_temp", Setting = 18.0 },
 #               { Control = "mode",        Setting = "Heat" },
-#               { Control = "power",       Setting = "on" } ]  
+#               { Control = "power",       Setting = true } ]  
 
 [Action.3]
-  Integration = "Daikin"
-  DeviceLabel = "Music Room"
-  Execute = [ { Control = "temperature", Setting = 20.0 },
+  Topic = "daikin2mqtt/Music_Room/set/controls"
+  Execute = [ { Control = "set_temp",    Setting = 20.0 },
               { Control = "mode",        Setting = "Heat" },
-              { Control = "power",       Setting = "on" } ]  
-
-#[Action.4]
-#  Integration = "Daikin"
-#  DeviceLabel = "Spare Bedroom"
-#  Execute = [ { Control = "temperature", Setting = 16.0 },
-#              { Control = "mode",        Setting = "Heat" },
-#              { Control = "power",       Setting = "on" } ]  
+              { Control = "power",       Setting = true } ]  
 
