--- a/examples/configs/automation/towelRailOffMorning.toml
+++ b/examples/configs/automation/towelRailOffMorning.toml
@@ -3,10 +3,8 @@ Description = "Turn Towel-Rail off for overnight off-peak"
 Enabled = true
 
 [Event]
-  Name = "Time/Events/TimedEvent/NightOffPeakEnds"
-#  Name = "Time/Ticker/SystemTicker/Minute"
+  Topic = "aghast/time/events/NightOffPeakEnds"
 
 [Action.1]
-  Integration = "Zigbee2MQTT"
-  DeviceLabel = "Towel_Rail"
+  Topic = "zigbee2mqtt/Towel_Rail/set"
   Execute = [ { Control = "state", Setting = "OFF" } ]
