--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -15,14 +15,14 @@ ControlPort = 46445           # HTTP port for back-end admin control
 # List of Integrations we want enabled
 Integrations = [
   "time",         # the Time integration MUST be enabled
-#  "automation",
+  "automation",
 #  "datalogger",
 #  "daikin",
   "hostchecker",
 #  "influx",
 #  "pimqttgpio",
 #  "postgres",
-  "scraper",
+#  "scraper",
 #  "tuya",
   "zigbee2mqtt",
 ]
