Add MqttCache Integration and document it.

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -18,8 +18,9 @@ Integrations = [
   "automation",
 #  "datalogger",
 #  "daikin",
-  "hostchecker",
+#  "hostchecker",
 #  "influx",
+   "mqttcache",
 #  "pimqttgpio",
 #  "postgres",
 #  "scraper",
