Move CSV DataLogger to MQTT events only. Add docs.

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -16,7 +16,7 @@ ControlPort = 46445           # HTTP port for back-end admin control
 Integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
-#  "datalogger",
+  "datalogger",
 #  "daikin",
 #  "hostchecker",
 #  "influx",
