Move Postgres Integration to MQTT source

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -21,9 +21,9 @@ Integrations = [
 #  "hostchecker",
 #  "influx",
 #  "mqttcache",
-  "mqttsender",
+#  "mqttsender",
 #  "pimqttgpio",
-#  "postgres",
+  "postgres",
 #  "scraper",
 #  "tuya",
 #  "zigbee2mqtt",
