Migrate Influx Integration to MQTT

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -19,11 +19,11 @@ Integrations = [
 #  "datalogger",
 #  "daikin",
 #  "hostchecker",
-#  "influx",
+  "influx",
 #  "mqttcache",
 #  "mqttsender",
 #  "pimqttgpio",
-  "postgres",
+#  "postgres",
 #  "scraper",
 #  "tuya",
 #  "zigbee2mqtt",
