--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -15,16 +15,13 @@ ControlPort = 46445           # HTTP port for back-end admin control
 # List of Integrations we want enabled
 Integrations = [
   "time",         # the Time integration MUST be enabled
-#  "automation",
-#  "datalogger",
-#  "daikin",
-#  "hostchecker",
+  "automation",
+  "datalogger",
+  "hostchecker",
   "influx",
-#  "mqttcache",
-#  "mqttsender",
-#  "pimqttgpio",
-#  "postgres",
-#  "scraper",
+  "mqttcache",
+  "mqttsender",
+  "postgres",
+  "scraper",
 #  "tuya",
-#  "zigbee2mqtt",
 ]
